use background-image on buttons to prevent shift on ios, increase code peg size

--- a/ui/mm-react/src/components/CodePeg.css
+++ b/ui/mm-react/src/components/CodePeg.css
@@ -8,7 +8,7 @@
   --code-peg-yellow: #FADB14;
   --code-peg-empty: #ffffff;
   --code-peg-border: #D8D8D8;
-  --code-peg-size-large: 38px;
+  --code-peg-size-large: 42px;
 }
 
 .codePeg {
