--- a/ui/mm-react/src/components/IconButton.css
+++ b/ui/mm-react/src/components/IconButton.css
@@ -1,6 +1,6 @@
 .iconButton {
-  height: 40px;
-  width: 40px;
+  height: 42px;
+  width: 42px;
   color: #262626;
   background-color: #ffffff;
   border: 1px solid #d9d9d9;
@@ -8,11 +8,34 @@
   display: inline-block;
   cursor: pointer;
   outline: none;
+  background-position: center; 
+  background-repeat:no-repeat;
 }
 
 .iconButton.check {
   color: #ffffff;
   background-color: #262626;
+  background-image:url("/assets/check.png");
+}
+
+.iconButton.close {
+  background-image:url("/assets/close.png");
+}
+
+.iconButton.delete {
+  background-image:url("/assets/delete.png");
+}
+
+.iconButton.info {
+  background-image:url("/assets/info.png");
+}
+
+.iconButton.random {
+  background-image:url("/assets/random.png");
+}
+
+.iconButton.reset {
+  background-image:url("/assets/reset.png");
 }
 
 .iconButton__disabled {
